# JsonBeauty

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  test.cpp
